# microservices_architecture_and_deployment

./: .gitignore  Cargo.toml  README.md  Readme.md  docker-compose.yml  google-artifactreg-cicd.md  google-iam-deploy-docs.md  google-iam-docs.md  run.sh
.github/workflows/: CD_QA_Workflow.yml  CI_Workflow.yml  deploy_ec2.js.yml  deploy_ec2.yml
customer/: DockerFile  Makefile  docker-compose.yml  package-lock.json  package.json
customer/nginx/: DockerFile  nginx.conf
customer/src/: express-app.js  index.js
customer/src/api/: app-event.js  customer.js
customer/src/config/: index.js
customer/src/services/: customer-service.js  customer-service.test.js
customer/src/utils/: index.js
migrations/2024-01-18-142214_customer/: up.sql
migrations/2024-01-18-143226_product/: down.sql  up.sql
migrations/2024-01-18-145609_order/: down.sql
process_diagrams/: nodejs.cluster.md
products/: DockerFile  package.json
products/src/: express-app.js  index.js
products/src/api/: app-events.js  products.js
products/src/services/: product-service.js  product-service.test.js
products/src/utils/: index.js
project-documentation/: continuous_deployment.md  manual_deployment.md
project-flow/: continuous_deployment.md  manual_deployment.md
proxy/: nginx.conf
rust/: Cargo.toml
rust/src/: database.rs  main.rs
rust/src/services/: mod.rs  (+1 more)
shopping/: DockerFile  package.json
shopping/src/: express-app.js  index.js
src/: main.rs  schema.rs
src/services/: customer_service.rs  mod.rs  product_service.rs
src/utils/: app_error.rs  index.rs  mod.rs
(+32 files in other folders)
