[package]
name = "microservices_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanoid = "0.4.0"
bcrypt = "0.15.0"
jsonwebtoken = "9.2.0"
dotenv = "0.15.0"
hmac = "0.12.1"
sha2 = "0.10.8"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
aws-config = "1.1.1"
aws-sdk-dynamodb = "1.9.0"
env_logger = "0.10.1"
serde = { version = "^1", features = ["derive"] }
serde_json = "1.0.64"